src/test/resources/regressions/features/sequences/seq-literal-fail4.go
package pkg

func foo() {
  // error: key exceeds sequence length
  //:: ExpectedOutput(type_error)
  ghost s := seq[int] { 1:42 }
}
